Update 'Ofront for Windows' and 'License.txt'.

--- a/Arch/shareware.html
+++ b/Arch/shareware.html
@@ -7,13 +7,16 @@
 	<body>
 		<h1>Software Templ Shareware</h1>
 		<hr />
-		<h2>Ofront (TM) License</h2>
+		<h2><a href="shareware/Ofront_FreeBSDstyle_License.txt">Ofront (TM) License</a></h2>
 
-		Copyright 1995-2012, Software Templ OG. All rights reserved.<br>
+		Copyright 1995-2013, Software Templ OG. All rights reserved.<br>
 		Ofront (TM) may be used in accordance with the intentions expressed by 
 		<a href="http://www.freebsd.org/copyright/freebsd-license.html">the FreeBSD license</a>
 		where 'The FreeBSD Project' is replaced by 'Software Templ OG'.<br>
 		<p>
+		Included files from the original Oberon project at ETH Zurich are distributed under the
+		<a href="ftp://ftp.ethoberon.ethz.ch/ETHOberon/license.txt">ETH Oberon license</a>,
+		which is also a FreeBSD-style license.
 		<hr/>
 		
 		<h2>Ofront for Linux</h2>
@@ -41,7 +44,7 @@
 		
 		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Windows is a version of 
 		Ofront for the Microsoft Windows Platform. Ofront for Windows runs as a 
-		subsystem of <a href="http://www.oberon.ch/prod/blackbox/" target="_">BlackBox 
+		subsystem of <a href="http://www.oberon.ch/blackbox.html" target="_">BlackBox 
 		Component Builder 1.4</a> from <a href="http://www.oberon.ch" target="_">Oberon 
 		microsystems</a>.
 		<p>
