* Arch/shareware.html

--- a/Arch/shareware.html
+++ b/Arch/shareware.html
@@ -9,7 +9,7 @@
 		<hr />
 		<h2><a href="shareware/Ofront_FreeBSDstyle_License.txt">Ofront (TM) License</a></h2>
 
-		Copyright 1995-2013, Software Templ OG. All rights reserved.<br>
+		Copyright 1995-2016, Software Templ OG. All rights reserved.<br>
 		Ofront (TM) may be used in accordance with the intentions expressed by 
 		<a href="http://www.freebsd.org/copyright/freebsd-license.html">the FreeBSD license</a>
 		where 'The FreeBSD Project' is replaced by 'Software Templ OG'.<br>
@@ -18,8 +18,70 @@
 		<a href="ftp://ftp.ethoberon.ethz.ch/ETHOberon/license.txt">ETH Oberon license</a>,
 		which is also a FreeBSD-style license.
 		<hr/>
+			
+		<h2>Ofront 1.4 for Raspbian</h2>
+			
+		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Raspbian is a version of 
+		Ofront for Raspbian based Raspberry Pi systems.
+		It has been tested with a Raspberry Pi-3 model but is expected to work with mosts Pi models.
+		An Oberon interface to the complete wiringPi library is included.
+		<p>
+		By <a href="shareware/ofront-1.4_raspbian-Pi3.tar.gz">downloading</a> and unzipping this 
+		software, you accept the Ofront license agreement.
+		Please unpack the archive in order to install the software. 
+		Use the commands in the bin folder.
+		You may want to look into the included bash scripts in order to see how the environment variables
+		OFRONT_HOME, OBERON, and LD_LIBRARY_PATH are to be used.
+		<p>You may also want to download 
+		<a href="shareware/man1.tar.gz">manual pages</a>,
+		<a href="shareware/fonts.tar.gz">additional fonts</a>, and 
+		<a href="shareware/v4-1.4-share.tar.gz">platform independent Oberon V4 source and resource files</a>.
+		<p>
+		The Ofront source files as well as a makefile are hosted on 
+		<a href="https://github.com/jtempl/ofront/" target="_">Github</a>.
+		<hr/>
+		<h2>Ofront 1.4 for Linux-386 Kernel 3.2</h2>
+			
+		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Linux is a version of 
+		Ofront for i386 based Linux systems. This version of Ofront for Linux is 
+		based on libc.so.6, libm.so.6 and libX11.so.6.
+		It has been tested under Debian/Wheezy/stable with Kernel 3.2.
+		<p>
+		By <a href="shareware/ofront-1.4_linux-386-3.2.tar.gz">downloading</a> and unzipping this 
+		software, you accept the Ofront license agreement.
+		Please unpack the archive in order to install the software. 
+		Use the commands in the bin folder.
+		You may want to look into the included bash scripts in order to see how the environment variables
+		OFRONT_HOME, OBERON, and LD_LIBRARY_PATH are to be used.
+		<p>You may also want to download 
+		<a href="shareware/man1.tar.gz">manual pages</a>,
+		<a href="shareware/fonts.tar.gz">additional fonts</a>, and 
+		<a href="shareware/v4-1.4-share.tar.gz">platform independent Oberon V4 source and resource files</a>.
+		<p>
+		The Ofront source files as well as a makefile are hosted on 
+		<a href="https://github.com/jtempl/ofront/" target="_">Github</a>.
+		<hr/>
+			
+		<h2>Ofront 1.3 for Linux-386 Kernel 3.2 (deprecated)</h2>
+			
+		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Linux is a version of 
+		Ofront for i386 based Linux systems. This version of Ofront for Linux is 
+		based on libc.so.6, libm.so.6 and libX11.so.6.
+		It has been tested under Debian/Wheezy/stable with Kernel 3.2.
+		<p>
+		By <a href="shareware/ofront-1.3_linux-386-3.2.tar.gz">downloading</a> and unzipping this 
+		software, you accept the Ofront license agreement.
+		Please unpack the archive in order to install the software. 
+		Use the commands in the bin folder.
+		You may want to look into the included bash scripts in order to see how the environment variables
+		OFRONT_HOME, OBERON, and LD_LIBRARY_PATH are to be used.
+		<p>You may also want to download 
+		<a href="shareware/man1.tar.gz">manual pages</a>,
+		<a href="shareware/fonts.tar.gz">additional fonts</a>, and 
+		<a href="shareware/v4-1.3-share.tar.gz">platform independent Oberon V4 source and resource files</a>.
+		<hr/>
 		
-		<h2>Ofront for Linux</h2>
+		<h2>Ofront 1.2 for Linux-386 Kernel 2.6 (deprecated)</h2>
 		
 		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Linux is a version of 
 		Ofront for i386 based Linux systems. This version of Ofront for Linux is 
@@ -39,7 +101,7 @@
 		<a href="shareware/v4-1.0-share.tar.gz">platform independent Oberon V4 resource files</a>.
 		<p>
 		<hr/>
-		
+
 		<h2>Ofront for Windows</h2>
 		
 		Ofront(TM) is an Oberon2-to-C Translator. Ofront for Windows is a version of 
